--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -2,56 +2,19 @@
 <head>
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
-    <script>
-        // TODO: Throw away this code.
-
-        $(function(){
-            var iosocket = io.connect();
- 
-            iosocket.on('connect', function () {
-                $('#incomingChatMessages').append($('<li>Connected</li>'));
- 
-                iosocket.on('message', function(messageStr) {
-                    var message = JSON.parse(messageStr);
-                    var payload = message.payload;
-                    var nick = payload.nick;
-                    var text = payload.text;
-
-                    var li = $('<li></li>');
-                    li.append($('<span class="nick"></span>').text("[" + nick + "]"));
-                    li.append($('<span class="text"></span>').text(text));
-                    $('#incomingChatMessages').append(li);
-                });
-                iosocket.on('disconnect', function() {
-                    $('#incomingChatMessages').append('<li>Disconnected</li>');
-                });
-            });
- 
-            $('#outgoingChatMessage').keypress(function(event) {
-                if(event.which == 13) {
-                    event.preventDefault();
-                    iosocket.send(JSON.stringify({
-                        type: "client.chat.message",
-                        payload: {
-                            text: $('#outgoingChatMessage').val()
-                        }
-                    }));
-                    $('#outgoingChatMessage').val('');
-                }
-            });
-        });
-    </script>
+    <script data-main="/js/main" src="/js/libs/require-jquery.js"></script>
 </head>
 <body>
+<div class="on-top">
+    <h1>ponyverse</h1>
 
-<h1>ponyverse</h1>
+    <ul id="incomingChatMessages"></ul>
+</div>
 
-<ul id="incomingChatMessages"></ul>
+<div id="chatbox">
+    <input class="text" type="text" />
+</div>
 
-
-<input type="text" id="outgoingChatMessage">
 </body>
 </html>
 
