Proof of concept nick handling on client. Also first shot on sessions.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -5,6 +5,17 @@
     <script data-main="/js/main" src="/js/libs/require-jquery.js"></script>
 </head>
 <body>
+
+<!-- TODO: Refactor -->
+
+<div id="login">
+    <form method="post" action="">
+        <label for="nick">Nick:</label>
+        <input name="nick" tyoe=text />
+        <button type="submit">Eeyup!</button>
+    </form>
+</div>
+
 <div class="on-top">
     <h1>ponyverse</h1>
 
