--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -2,7 +2,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
 
-    <script data-main="/js/main" src="/js/libs/require-2.1.2.min.js"></script>
+    <script data-main="/js/main" src="/js/libs/require-2.1.2-jquery-1.8.3.js"></script>
 </head>
 <body>
 
