Restructering client code, first real views, basic "login"...

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -6,25 +6,7 @@
 </head>
 <body>
 
-<!-- TODO: Refactor -->
-
-<div id="login">
-    <form method="post" action="">
-        <label for="nick">Nick:</label>
-        <input name="nick" tyoe=text />
-        <button type="submit">Eeyup!</button>
-    </form>
-</div>
-
-<div class="on-top">
-    <h1>ponyverse</h1>
-
-    <ul id="incomingChatMessages"></ul>
-</div>
-
-<div id="chatbox">
-    <input class="text" type="text" />
-</div>
+<div id="ui"></div>
 
 </body>
 </html>
